RESOLVED FIXED18576
[GTK] windowsKeyCodeForKeyEvent doesn't handle GDK_ISO_Enter and GDK_KP_Enter
https://bugs.webkit.org/show_bug.cgi?id=18576
Summary [GTK] windowsKeyCodeForKeyEvent doesn't handle GDK_ISO_Enter and GDK_KP_Enter
Marco Barisione
Reported 2008-04-18 03:37:50 PDT
windowsKeyCodeForKeyEvent (in WebCore/platform/gtk/KeyEventGtk.cpp) handles GDK_Return but not GDK_ISO_Enter and GDK_KP_Enter. I will write a patch ASAP.
Attachments
Handle GDK_ISO_Enter and GDK_KP_Enter in windowsKeyCodeForKeyEvent (1003 bytes, patch)
2008-04-18 04:20 PDT, Marco Barisione
alp: review+
Marco Barisione
Comment 1 2008-04-18 04:20:51 PDT
Created attachment 20663 [details] Handle GDK_ISO_Enter and GDK_KP_Enter in windowsKeyCodeForKeyEvent
Alp Toker
Comment 2 2008-04-18 20:32:08 PDT
Landed in r32245. patch had a little trouble with this one so I had to hand-apply.
Note You need to log in before you can comment on or make changes to this bug.