2008-04-18  Marco Barisione  <marco@barisione.org>

Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=18576
        [GTK] windowsKeyCodeForKeyEvent doesn't handle GDK_ISO_Enter and
        GDK_KP_Enter

        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): handle GDK_ISO_Enter and
        GDK_KP_Enter in windowsKeyCodeForKeyEvent.


Canonical link: https://commits.webkit.org/25600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32245 268f45cc-cd09-0410-ab3c-d52691b4dbfc